--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="navigationBar">
         <nav class="navbar navbar-expand-xl navbar-dark py-4">
             <div class="container">
                 <a class="navbar-brand" href="#"><img style="width:75px; position:absolute; top:10px; z-index:1000;" class="img-fluid" src="assets/images/logo.png" alt="Transport United FC"></a>
