--- a/academy.html
+++ b/academy.html
@@ -50,8 +50,41 @@
     <!-- top banner / hero -->
     <section class="content" style="position: relative;">
         <img class="img-fluid w-100 hero-image-academy" src="assets/images/academy.jpg" alt="">
-        <div class="text-center" style="position: absolute; bottom: 10%; left: 25%; right:25%;">
-            <h2 class="text-white">in the news</h2>
+        <div class="text-center" style="position: absolute; bottom: 7%; left: 25%; right:25%;">
+            <h1 class="academy-heading">in the news</h1>
+        </div>
+    </section>
+    <section class="content" style="height: 600px; background-color:#740F1F;">
+        <div class="container h-100">
+            <div class="row h-100" style="padding: 100px 0;">
+                <div class="col-lg-6 content">
+                    <div class="text-white p-4">
+                        <h2 class="text-center" style="text-transform: capitalize;">Only the best is enough</h2>
+                        <!-- p>Transport United Football Club (TUFC) is a Bhutanese professional football club based in Thimphu, the capital city of Bhutan and competes in the Bhutan Premier League. The club was founded in 2001 and plays at the Changlimithang Stadium. Transport United Football Club was established by the Road Safety and Transport Authority (RSTA) and volunteers from the private transporters in 2001. RSTA and the volunteers backed the club until the club got relegated to the second division in 2007. The present Club General Secretary, Technical Director and the treasurer continued with the club and fought for promotion until 2016. </p> -->
+                        <p>Football Clubs in Bhutan are progressively increasing their level of complexity in terms of resources, organization and strategies. These days, the clubs in Bhutan are not only interested in how to win matches but we also owe a sense of decency to our fans. Because we are the ambassador of this beautiful game to our fans and audience, we are in a privileged position to influence them positively and vice versa. Transport United FC (TUFC) has been heavily influenced by the society and by the local community. In its activity, the club takes over values of the community of which it is a member and reproduces them onto the football pitch or in each ever other activities it runs. Hence, the CSR of the club was born.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-6" style="position:relative;">
+                    <div class="d-flex flex-column justify-content-center w-100 h-100 p-5" style="background-color: #8F2737; border-radius: 12px;">
+                        <h2 class="text-center text-white" style="text-transform: capitalize;">Our Coaches</h2>
+                        <div class="d-flex justify-content-evenly">
+                            <figure class="text-white text-center">
+                                <img class="img-fluid" src="assets/images/avatar.jpg" alt="">
+                                <p class="m-0" style="color: #E0BD53; font-size: 16px; margin-top: 5px;">Coach name</p>
+                            </figure>
+                            <figure class="text-white text-center">
+                                <img class="img-fluid" src="assets/images/avatar.jpg" alt="">
+                                <p class="m-0" style="color: #E0BD53; font-size: 16px; margin-top: 5px;">Coach name</p>
+                            </figure>
+                            <figure class="text-white text-center">
+                                <img class="img-fluid" src="assets/images/avatar.jpg" alt="">
+                                <p class="m-0" style="color: #E0BD53; font-size: 16px; margin-top: 5px;">Coach name</p>
+                            </figure>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- footer -->
