--- a/academy.html
+++ b/academy.html
@@ -51,7 +51,7 @@
     <section class="content" style="position: relative;">
         <img class="img-fluid w-100 hero-image-academy" src="assets/images/academy.jpg" alt="">
         <div class="text-center" style="position: absolute; bottom: 7%; left: 25%; right:25%;">
-            <h1 class="academy-heading">in the news</h1>
+            <h1 class="academy-heading">improve your skills</h1>
         </div>
     </section>
     <section class="content" style="height: 600px; background-color:#740F1F;">
