--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
     <!-- top banner / hero -->
     <section class="about-hero-img" style="position: relative; z-index: 500;">
         <img class="img-fluid hero-image w-100" src="assets/images/about.jpg" alt="">
-        <div style="position:absolute; bottom: 0; z-index: 10000; width: 100%;">
+        <div style="position:absolute; bottom: -5px; z-index: 10000; width: 100%;">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 220">
                 <path fill="#740f1f" fill-opacity="1" d="M0,192L720,64L1440,192L1440,0L720,0L0,0Z"></path>
             </svg>
