--- a/academy.html
+++ b/academy.html
@@ -54,19 +54,27 @@
             <h1 class="academy-heading">improve your skills</h1>
         </div>
     </section>
-    <section class="content" style="height: 600px; background-color:#740F1F;">
+    <!-- our coaches & registration -->
+    <section class="content" style="background-color:#740F1F;">
         <div class="container h-100">
-            <div class="row h-100" style="padding: 100px 0;">
+            <div class="row h-100" style="padding: 5.4vw 0;">
                 <div class="col-lg-6 content">
                     <div class="text-white p-4">
                         <h2 class="text-center" style="text-transform: capitalize;">Only the best is enough</h2>
                         <!-- p>Transport United Football Club (TUFC) is a Bhutanese professional football club based in Thimphu, the capital city of Bhutan and competes in the Bhutan Premier League. The club was founded in 2001 and plays at the Changlimithang Stadium. Transport United Football Club was established by the Road Safety and Transport Authority (RSTA) and volunteers from the private transporters in 2001. RSTA and the volunteers backed the club until the club got relegated to the second division in 2007. The present Club General Secretary, Technical Director and the treasurer continued with the club and fought for promotion until 2016. </p> -->
                         <p>Football Clubs in Bhutan are progressively increasing their level of complexity in terms of resources, organization and strategies. These days, the clubs in Bhutan are not only interested in how to win matches but we also owe a sense of decency to our fans. Because we are the ambassador of this beautiful game to our fans and audience, we are in a privileged position to influence them positively and vice versa. Transport United FC (TUFC) has been heavily influenced by the society and by the local community. In its activity, the club takes over values of the community of which it is a member and reproduces them onto the football pitch or in each ever other activities it runs. Hence, the CSR of the club was born.
                         </p>
+                        <a data-bs-toggle="modal" data-bs-target="#exampleModal" href="" class="btn my-btn mt-2">
+                            <svg class="button_icon" preserveAspectRatio="none" data-bbox="278.906 188.589 82.187 82.187" xmlns="http://www.w3.org/2000/svg" viewBox="278.906 188.589 82.187 82.187" role="presentation" aria-hidden="true">
+                                <g>
+                                    <path d="M320 188.589c-22.659 0-41.094 18.435-41.094 41.094 0 22.659 18.435 41.093 41.094 41.093 22.66 0 41.093-18.435 41.093-41.093.001-22.659-18.433-41.094-41.093-41.094zm4 7.69c8 .864 14.637 4.343 19.873 9.529-5.867 4.115-12.873 6.629-19.873 7.282v-16.811zm-7 16.811c-7-.654-14.032-3.177-19.907-7.307 5.248-5.186 11.907-8.661 19.907-9.512v16.819zm0 7.501V226h-30.404c.585-5 2.724-10.129 5.428-14.353 7.219 5.189 15.976 8.259 24.976 8.944zM317 234v4.716c-9 .686-17.777 4.108-25.001 9.308-2.7-4.229-4.833-9.023     -5.409-14.023H317zm0 12.217v16.877c-8-.853-14.691-4.341-19.942-9.546 5.882-4.145 12.942-6.676 19.942-7.331zm7 0c7 .653 14.033 3.177 19.908 7.307-5.241 5.205-11.908 8.698-19.908 9.563v-16.87zm0-7.501V234h29.412c-.576 5-2.231 9.771-4.921 13.994-7.216-5.181-15.491-8.594-24.491-9.278zM324 226v-5.409c9-.684 17.255-3.744 24.466-8.915 2.693 4.216 4.354 9.323 4.938 14.323H324z"></path>
+                                </g>
+                            </svg>Register Now
+                        </a>
                     </div>
                 </div>
-                <div class="col-lg-6" style="position:relative;">
-                    <div class="d-flex flex-column justify-content-center w-100 h-100 p-5" style="background-color: #8F2737; border-radius: 12px;">
+                <div class="col-lg-6">
+                    <div class="d-flex flex-column justify-content-center mx-auto h-100 p-5" style="width: 92%; background-color: #8F2737; border-radius: 12px;">
                         <h2 class="text-center text-white" style="text-transform: capitalize;">Our Coaches</h2>
                         <div class="d-flex justify-content-evenly">
                             <figure class="text-white text-center">
@@ -84,6 +92,209 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <!-- list of academy players -->
+    <section class="content" style=" padding: 4.5vw 0">
+        <div class="container py-5 text-center">
+            <div class="d-none d-lg-inline-block mx-3 my-3 title-lines" style="height: .5px; width: 200px; background: #909090"></div>
+            <h2 style="color:#740F1F;" class="d-inline-block">U-17</h2>
+            <div class="d-none d-lg-inline-block mx-3 my-3 title-lines" style="height: .5px; width: 200px; background: #909090"></div>
+            <div class="d-flex flex-wrap justify-content-center align-content-center" style="column-gap: 60px; row-gap:30px;">
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p2.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p3.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p4.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p5.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p6.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p7.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p8.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p9.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p10.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p11.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p12.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+            </div>
+        </div>
+        <div class="container py-5 text-center">
+            <div class="d-none d-lg-inline-block mx-3 my-3 title-lines" style="height: .5px; width: 200px; background: #909090"></div>
+            <h2 style="color:#740F1F;" class="d-inline-block">U-12</h2>
+            <div class="d-none d-lg-inline-block mx-3 my-3 title-lines" style="height: .5px; width: 200px; background: #909090"></div>
+            <div class="d-flex flex-wrap justify-content-center align-content-center" style="column-gap: 60px; row-gap:30px;">
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+            </div>
+        </div>
+        <div class="container py-5 text-center">
+            <div class="d-none d-lg-inline-block mx-3 my-3 title-lines" style="height: .5px; width: 200px; background: #909090"></div>
+            <h2 style="color:#740F1F;" class="d-inline-block">U-10</h2>
+            <div class="d-none d-lg-inline-block mx-3 my-3 title-lines" style="height: .5px; width: 200px; background: #909090"></div>
+            <div class="d-flex flex-wrap justify-content-center align-content-center" style="column-gap: 60px; row-gap:30px;">
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+            </div>
+        </div>
+        <div class="container py-5 text-center">
+            <div class="d-none d-lg-inline-block mx-3 my-3 title-lines" style="height: .5px; width: 200px; background: #909090"></div>
+            <h2 style="color:#740F1F;" class="d-inline-block">U-08</h2>
+            <div class="d-none d-lg-inline-block mx-3 my-3 title-lines" style="height: .5px; width: 200px; background: #909090"></div>
+            <div class="d-flex flex-wrap justify-content-center align-content-center" style="column-gap: 60px; row-gap:30px;">
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
+                <span>
+                    <img style="border-radius: 50%;width:180px; height: 180px;" class="img-fluid" src="assets/images/p1.jpeg" alt="">
+                    <p class="m-0" style="color: #740F1F; font-size: 16px; margin-top: 5px;">Full name</p>
+                </span>
             </div>
         </div>
     </section>
