--- a/shop.html
+++ b/shop.html
@@ -59,18 +59,18 @@
     <section class="" style="padding: 4.5vw 0;">
         <div class="container">
             <!-- BRAND 1 -->
-            <div class="row justify-content-center py-3">
-                <div class="col-lg-4 p-4 text-end">
+            <div class="row justify-content-center py-4">
+                <div class="col-lg-4 p-4 text-center text-lg-end">
                     <img src="assets/images/brand1.jpg" alt="" class="img-fluid" style="width:85%; border-radius:12px;">
                 </div>
                 <div class="col-lg-1 p-0 d-flex flex-row align-items-center justify-content-evenly" style="position: relative;">
-                    <p class="vt-text text-center h-50">
+                    <p class="vt-text text-center d-none d-lg-block">
                         <span>s</span>
                         <span>h</span>
                         <span>o</span>
                         <span>p</span>
                     </p>
-                    <p class="vt-text2 text-center h-50">
+                    <p class="vt-text2 text-center d-none d-lg-block">
                         <span>a</span>
                         <span>l</span>
                         <span>c</span>
@@ -79,7 +79,7 @@
                     </p>
                 </div>
                 <div class="col-lg-6 d-flex align-items-center p-3" style="position: relative;">
-                    <div class="content p-5">
+                    <div class="content p-4">
                         <h2 class="brand-title d-lg-none text-center">shop <span>alcis</span></h2>
                         <p style="position: relative;">Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Inventore eius quae impedit commodi corrupti quasi facere doloribus praesentium nisi est et sint rerum recusandae, similique aut nostrum reprehenderit repudiandae fugit cum. Alias, maxime quod rerum nisi distinctio nihil, amet labore. </p>
                         <a href="#" class="btn my-btn2 shop-page"> shop now</a>
@@ -87,57 +87,59 @@
                 </div>
             </div>
             <!-- BRAND 2 -->
-            <div class="row justify-content-center py-3">
-                <div class="col-lg-4 p-4 text-start order-3">
-                    <img src="assets/images/brand1.jpg" alt="" class="img-fluid" style="width:85%; border-radius:12px;">
+            <div class="row justify-content-center py-4">
+                <div class="col-lg-4 p-4 text-center text-lg-start order-lg-3">
+                    <img src="assets/images/brand2.jpg" alt="" class="img-fluid" style="width:85%; border-radius:12px;">
                 </div>
-                <div class="col-lg-1 p-0 d-flex flex-row align-items-center justify-content-evenly order-2" style="position: relative;">
-                    <p class="vt-text2 brand2 text-center h-50">
+                <div class="col-lg-1 p-0 d-flex flex-row align-items-center justify-content-evenly order-lg-2" style="position: relative;">
+                    <p class="vt-text2 brand2 text-center d-none d-lg-block">
                         <span>c</span>
                         <span>h</span>
                         <span>o</span>
                         <span>d</span>
                         <span>e</span>
                     </p>
-                    <p class="vt-text brand2 text-center h-50">
+                    <p class="vt-text brand2 text-center d-none d-lg-block">
                         <span>s</span>
                         <span>h</span>
                         <span>o</span>
                         <span>p</span>
                     </p>
                 </div>
-                <div class="col-lg-6 d-flex align-items-center p-3 order-1" style="position: relative;">
-                    <div class="content p-5 text-end">
-                        <h2 class="brand-title d-lg-none text-center">shop <span>alcis</span></h2>
-                        <p class="text-end" style="position: relative;">Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Inventore eius quae impedit commodi corrupti quasi facere doloribus praesentium nisi est et sint rerum recusandae, similique aut nostrum reprehenderit repudiandae fugit cum. Alias, maxime quod rerum nisi distinctio nihil, amet labore. </p>
+                <div class="col-lg-6 d-flex align-items-center p-3 order-lg-1" style="position: relative;">
+                    <div class="content p-4 text-lg-end">
+                        <h2 class="brand-title d-lg-none text-center">shop <span>chode</span></h2>
+                        <p class=" text-lg-end" style="position: relative;">Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Inventore eius quae impedit commodi corrupti quasi facere doloribus praesentium nisi est et sint rerum recusandae, similique aut nostrum reprehenderit repudiandae fugit cum. Alias, maxime quod rerum nisi distinctio nihil, amet labore. </p>
                         <a href="#" class="btn my-btn2 shop-page"> shop now</a>
                     </div>
                 </div>
             </div>
             <!-- BRAND 3 -->
-            <div class="row justify-content-center py-3">
-                <div class="col-lg-4 p-4 text-start order-3">
-                    <img src="assets/images/brand1.jpg" alt="" class="img-fluid" style="width:85%; border-radius:12px;">
+            <div class="row justify-content-center py-4">
+                <div class="col-lg-4 p-4 text-center text-lg-end">
+                    <img src="assets/images/brand3.jpg" alt="" class="img-fluid" style="width:85%; border-radius:12px;">
                 </div>
-                <div class="col-lg-1 p-0 d-flex flex-row align-items-center justify-content-evenly order-2" style="position: relative;">
-                    <p class="vt-text2 brand2 text-center h-50">
-                        <span>c</span>
-                        <span>h</span>
-                        <span>o</span>
-                        <span>d</span>
-                        <span>e</span>
-                    </p>
-                    <p class="vt-text brand2 text-center h-50">
+                <div class="col-lg-1 p-0 d-flex flex-row align-items-center justify-content-evenly" style="position: relative;">
+                    <p class="vt-text text-center d-none d-lg-block">
                         <span>s</span>
                         <span>h</span>
                         <span>o</span>
                         <span>p</span>
                     </p>
+                    <p class="vt-text2 text-center d-none d-lg-block">
+                        <span>v</span>
+                        <span>e</span>
+                        <span>c</span>
+                        <span>t</span>
+                        <span>o</span>
+                        <span>r</span>
+                        <span>x</span>
+                    </p>
                 </div>
-                <div class="col-lg-6 d-flex align-items-center p-3 order-1" style="position: relative;">
-                    <div class="content p-5 text-end">
-                        <h2 class="brand-title d-lg-none text-center">shop <span>alcis</span></h2>
-                        <p class="text-end" style="position: relative;">Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Inventore eius quae impedit commodi corrupti quasi facere doloribus praesentium nisi est et sint rerum recusandae, similique aut nostrum reprehenderit repudiandae fugit cum. Alias, maxime quod rerum nisi distinctio nihil, amet labore. </p>
+                <div class="col-lg-6 d-flex align-items-center p-3" style="position: relative;">
+                    <div class="content p-4">
+                        <h2 class="brand-title d-lg-none text-center">shop <span>vector x</span></h2>
+                        <p style="position: relative;">Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Inventore eius quae impedit commodi corrupti quasi facere doloribus praesentium nisi est et sint rerum recusandae, similique aut nostrum reprehenderit repudiandae fugit cum. Alias, maxime quod rerum nisi distinctio nihil, amet labore. </p>
                         <a href="#" class="btn my-btn2 shop-page"> shop now</a>
                     </div>
                 </div>
