design till date

--- a/shop.html
+++ b/shop.html
@@ -52,15 +52,17 @@
         <div class="container d-flex align-items-center justify-content-center flex-wrap text-center py-5">
             <img class="hero-image-shop" src="assets/images/shop-hero.png" alt="">
             <div class="flex-grow-1">
-                <h1 class="flex-grow-1 text-white"><i>SHOP WITH PRIDE</i></h1>
+                <h1 class="mb-2 text-white" style="font-size: 50px;" class="flex-grow-1 text-white"><i>SHOP WITH PRIDE</i></h1>
+                <p class="text-white lead" style="letter-spacing:2px; font-size: 18px;"><i>Official TUFC Merch</i></p>
+                <div class="d-none d-lg-inline-block title-lines" style="height: 3px; width: 150px; background: #b98c0f"></div>
             </div>
         </div>
     </section>
-    <section class="" style="padding: 4.5vw 0;">
+    <section style="padding: 4.5vw 0;">
         <div class="container">
             <!-- BRAND 1 -->
-            <div class="row justify-content-center py-4">
-                <div class="col-lg-4 p-4 text-center text-lg-end">
+            <div class="row justify-content-center py-3">
+                <div class="col-lg-4 p-2 text-center text-lg-end">
                     <img src="assets/images/brand1.jpg" alt="" class="img-fluid" style="width:85%; border-radius:12px;">
                 </div>
                 <div class="col-lg-1 p-0 d-flex flex-row align-items-center justify-content-evenly" style="position: relative;">
@@ -87,8 +89,8 @@
                 </div>
             </div>
             <!-- BRAND 2 -->
-            <div class="row justify-content-center py-4">
-                <div class="col-lg-4 p-4 text-center text-lg-start order-lg-3">
+            <div class="row justify-content-center py-3">
+                <div class="col-lg-4 p-2 text-center text-lg-start order-lg-3">
                     <img src="assets/images/brand2.jpg" alt="" class="img-fluid" style="width:85%; border-radius:12px;">
                 </div>
                 <div class="col-lg-1 p-0 d-flex flex-row align-items-center justify-content-evenly order-lg-2" style="position: relative;">
@@ -115,8 +117,8 @@
                 </div>
             </div>
             <!-- BRAND 3 -->
-            <div class="row justify-content-center py-4">
-                <div class="col-lg-4 p-4 text-center text-lg-end">
+            <div class="row justify-content-center py-3">
+                <div class="col-lg-4 p-2 text-center text-lg-end">
                     <img src="assets/images/brand3.jpg" alt="" class="img-fluid" style="width:85%; border-radius:12px;">
                 </div>
                 <div class="col-lg-1 p-0 d-flex flex-row align-items-center justify-content-evenly" style="position: relative;">
@@ -140,6 +142,49 @@
                     <div class="content p-4">
                         <h2 class="brand-title d-lg-none text-center">shop <span>vector x</span></h2>
                         <p style="position: relative;">Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Inventore eius quae impedit commodi corrupti quasi facere doloribus praesentium nisi est et sint rerum recusandae, similique aut nostrum reprehenderit repudiandae fugit cum. Alias, maxime quod rerum nisi distinctio nihil, amet labore. </p>
+                        <a href="#" class="btn my-btn2 shop-page"> shop now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- shop categories -->
+    <section class="shop-category" style="padding-bottom: 5.5vw; ">
+        <div class="container w-75">
+            <h1 style="font-size: 50px;" class="text-center"><i class="text-center">SHOP by category</i></h1>
+            <div class="grid-ish p-3">
+                <div class="text-white flex-item-1 text-center text-lg-end">
+                    <img class="img-fluid p-3 category-img" src="assets/images/men.jpg" alt="">
+                    <div class="category-cta text-start">
+                        <h3>men</h3>
+                        <a href="#" class="btn my-btn2 shop-page"> shop now</a>
+                    </div>
+                </div>
+                <div class="text-white flex-item-2 text-center text-lg-start">
+                    <img class="img-fluid p-3 category-img" src="assets/images/women.jpg" alt="">
+                    <div class="category-cta text-start">
+                        <h3>women</h3>
+                        <a href="#" class="btn my-btn2 shop-page"> shop now</a>
+                    </div>
+                </div>
+                <div class="text-white flex-item-3 text-center text-lg-end">
+                    <img class="img-fluid p-3 category-img" src="assets/images/children.jpg" alt="">
+                    <div class="category-cta-small text-start">
+                        <h3>children</h3>
+                        <a href="#" class="btn my-btn2 shop-page"> shop now</a>
+                    </div>
+                </div>
+                <div class="text-white flex-item-3 text-center text-lg-end">
+                    <img class="img-fluid p-3 category-img" src="assets/images/shoes.jpg" alt="">
+                    <div class="category-cta-small text-start">
+                        <h3>shoes</h3>
+                        <a href="#" class="btn my-btn2 shop-page"> shop now</a>
+                    </div>
+                </div>
+                <div class="text-white flex-item-3 text-center text-lg-end">
+                    <img class="img-fluid p-3 category-img" src="assets/images/equipment.jpg" alt="">
+                    <div class="category-cta-small text-start">
+                        <h3>equipments</h3>
                         <a href="#" class="btn my-btn2 shop-page"> shop now</a>
                     </div>
                 </div>
