--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 </head>
 
 <body>
+    <div class="loader">
+        <div class="text-center">
+            <img class="loaderLogo img-fluid" src="assets/images/loader-logo.png" alt="tufc-logo"> <br>
+            <!-- <div class="spinner-border mt-3" role="status">
+                    <span class="sr-only"></span>
+                </div> -->
+        </div>
+        <p class="text-white loaderText lead" style="font-size: 14px; letter-spacing: 1px; opacity:0; transform: translateY(10px);">
+            <span>©Transport United Football Club</span>
+        </p>
+    </div>
     <header id="navigationBar">
         <nav class="navbar navbar-expand-xl navbar-dark py-4">
             <div class="container">
@@ -652,7 +663,8 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="script.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    <script src="assets/js/gsap.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
 </body>
 
